# abilian-sbe

./: .dir-locals.el  .editorconfig  .eslintrc.js  .gitchangelog.rc  .gitignore  .jshintrc  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES.rst  CREDITS.txt  MANIFEST.in  Makefile  Procfile  README.md  README.rst  TODO-extranet.txt  TODO.md  Vagrantfile  alembic.ini  circle.yml  conftest.py  dev-requirements.txt  git-requirements.txt  manage.py  mypy.ini  noxfile.py  package.json  pylintrc  pyproject.toml  requirements.in  requirements.txt  run.py  setup.cfg  setup.py  setup_util.py  tox.ini  tox_install_cmd  wsgi.py
.circleci/: config.yml
.github/workflows/: ci.yml  front-checks.yml  python-checks.yml  python-tests.yml
abilian/: __init__.py
abilian/sbe/: __init__.py  app.py  boot.py  conftest.py  extension.py  testing.py
abilian/sbe/apps/calendar/: __init__.py  actions.py  forms.py  models.py  views.py
abilian/sbe/apps/calendar/tests/: tests.py
abilian/sbe/apps/communities/: __init__.py  actions.py  blueprint.py  common.py  events.py  forms.py  models.py  presenters.py  search.py  security.py  signals.py  views.py
abilian/sbe/apps/communities/tests/: base.py  conftest.py  fixtures.py  test_common.py  test_community.py  test_community_classic.py  test_community_noweb.py  test_community_pytest.py  test_community_web.py  test_wizard.py
abilian/sbe/apps/communities/views/: __init__.py  views.py  wizard.py
abilian/sbe/apps/documents/: __init__.py  actions.py  cli.py  commands.py  events.py  lock.py  models.py  repository.py  search.py  signals.py  tasks.py
abilian/sbe/apps/documents/cmis/: __init__.py  atompub.py  parser.py  renderer.py
abilian/sbe/apps/documents/tests/: conftest.py  test_documents.py  test_documents_web.py  test_documents_web_pytest.py  test_entities.py  test_lock.py  test_parser.py  test_paths.py  test_renderer.py  test_repository.py  test_webdav_xml.py
abilian/sbe/apps/documents/views/: __init__.py  documents.py  folders.py  util.py  views.py
abilian/sbe/apps/documents/webdav/: __init__.py  constants.py  views.py  xml.py
abilian/sbe/apps/forum/: __init__.py  actions.py  cli.py  commands.py  forms.py  models.py  tasks.py  tests.py  views.py
abilian/sbe/apps/forum/tests/: integration_tests.py  test_integration_classic.py  test_integration_new.py  test_web.py  tests.py  unit_tests.py  util.py
abilian/sbe/apps/main/: __init__.py  main.py
abilian/sbe/apps/notifications/: __init__.py  tests.py
abilian/sbe/apps/notifications/tasks/: social.py
abilian/sbe/apps/notifications/views/: __init__.py  social.py
abilian/sbe/apps/preferences/: __init__.py  tests.py
abilian/sbe/apps/preferences/panels/: sbe_notifications.py
abilian/sbe/apps/social/: __init__.py  forms.py  models.py  restapi.py  widgets.py
abilian/sbe/apps/social/tests/: test_social_models.py  test_social_views.py
abilian/sbe/apps/social/views/: groups.py  invites.py  sidebars.py  social.py  users.py  util.py
abilian/sbe/apps/wall/: __init__.py  presenters.py  util.py  views.py
abilian/sbe/apps/wiki/: __init__.py  actions.py  exporter.py  forms.py  markup.py  models.py  test_wiki.py  tests.py  util.py  views.py
abilian/sbe/apps/wiki/data/: default_page.txt  help.txt
abilian/sbe/apps/wiki/tests/: test_models.py  test_web.py  test_web_classic.py  test_web_new.py
abilian/sbe/static/extranet/: README.txt  abilian.js  app.js  datatable.js  widgets.js
abilian/sbe/static/js/: bootstrap-tagsinput.js  document_viewer.js  folder.js  folder_edit.js  folder_gallery.js  folder_upload.js  jquery.fileapi.js  sbe-datatable.js  social.css
abilian/sbe/static/less/: README.txt  abilian-sbe.less  overrides.less  print.less
abilian/sbe/static/less/base/: print.less
abilian/sbe/static/less/modules/: base.less  bootstrap-tagsinput.less  communities.less  documents.less  excel.less  forms.less  forum.less  login.less  misc.less  search.less  social.less  tables.less  wiki.less  wizard_steps.less
abilian/sbe/static/pdfjs/: README.txt
abilian/sbe/static/pdfjs/locale/: locale.properties
abilian/sbe/templates/: help.html
abilian/sbe/translations/: messages.pot
abilian/sbe/translations/es/LC_MESSAGES/: messages.po
abilian/sbe/translations/fr/LC_MESSAGES/: messages.po
abilian/sbe/translations/tr/LC_MESSAGES/: messages.po
abilian/sbe/translations/zh/LC_MESSAGES/: messages.po
demo/: Makefile  README.md  install.sh  manage.py  redis.conf  test.py  wsgi.py
deploy/: provision.sh  vagrant_test.sh
devops/: provision.sh
etc/: babel.cfg  config_dev.py  deps-devel.txt  deps.txt  dev-requirements.txt  git-requirements.txt  liccheck.ini  logging-dev.yml  pylintrc  requirements.txt
scripts/: check_emails.py
src/abilian/: __init__.py
src/abilian/sbe/: app.py  boot.py  extension.py  testing.py
src/abilian/sbe/apps/calendar/: __init__.py  actions.py  forms.py  models.py  views.py
src/abilian/sbe/apps/communities/: __init__.py  actions.py  blueprint.py  common.py  events.py  forms.py  models.py  presenters.py  search.py  security.py  signals.py
src/abilian/sbe/apps/documents/: __init__.py  actions.py  cli.py  lock.py  models.py  repository.py  search.py  signals.py  tasks.py
src/abilian/sbe/apps/forum/: __init__.py  actions.py  cli.py  forms.py  models.py  tasks.py  views.py
src/abilian/sbe/apps/main/: __init__.py  main.py
src/abilian/sbe/apps/notifications/: __init__.py  tests.py
src/abilian/sbe/apps/preferences/: __init__.py  tests.py
src/abilian/sbe/apps/social/: __init__.py  forms.py  models.py  restapi.py  widgets.py
src/abilian/sbe/apps/wall/: __init__.py  presenters.py  util.py  views.py
src/abilian/sbe/apps/wiki/: __init__.py  actions.py  exporter.py  forms.py  markup.py  models.py  util.py  views.py
src/abilian/sbe/static/csv/: csv_example.csv
src/abilian/sbe/static/fileicons/: README.txt
src/abilian/sbe/templates/: help.html
src/abilian/sbe/translations/: messages.pot
test/functional/: test.py
tests/functional/: test.py
tests/integration/: test_routes.py
tools/hooks/: pre-commit
(+221 files in other folders)
