[tool.poetry]
name = "abilian-sbe"
version = "0.5.1"
description = "Social Business platform, including: document management, wiki, forum, enterprise social networking, and more"
authors = ["Abilian SAS"]
license = "LGPL"
readme = "README.rst"
repository = "https://github.com/abilian/abilian-sbe"
packages = [{ include = "abilian" }]
include = ["abilian/*", "abilian/**/*"]


[tool.poetry.dependencies]
python = "^3.6"

# Abilian Core
abilian-core = ">=0.11"
# abilian-core = { git = "https://github.com/abilian/abilian-core.git", branch = "devel" }

# Temp
wtforms = "<2.2"

# Email validation (when sending digests)
validate_email = "*"

# Language and charset detection
langid = ">=1.1"
chardet = "*"

# Markdown support for Wiki
markdown = "^3"

# needed by folder: export to xls
xlwt = "*"
openpyxl = "^2.3.0"

# Better FP library than itertools IMHO.
toolz = "*"

[tool.poetry.dev-dependencies]
# Debug
flask-debugtoolbar = "*"

# Our favorite test runner with some plugins and CI builder
pytest = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-randomly = "*"

# Coverage
coverage = ">=4.1"
pytest-cov = "*"

# Python clone of Foreman, useful to test Heroku config locally
honcho = "*"

# Documentation generator
Sphinx = "*"

# Lint .rst files
restructuredtext-lint = "*"

# Standard theme for readthedocs.com
sphinx-rtd-theme = "*"

# Used to check links in the application
Flask-LinkTester = "*"

# Static code analysis
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-mypy = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"
mypy-mypyc = "*"
pre-commit = "*"
pylint = "*"

# Formatters
isort = "*"
black = { version = "*", allows-prereleases = true }


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
