#
# PBR
#
[metadata]
name=abilian-sbe
version=0.1dev
url=http://docs.abilian.com/
license=LGPL
author=Abilian SAS
author_email=contact@abilian.com
description=Social Business / Enterprise Social Networking platform
classifier =
    'Development Status :: 3 - Alpha'
    'Environment :: Web Environment'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)'
    'Operating System :: OS Independent'
    'Programming Language :: Python'
    'Framework :: Flask'

[files]
packages=abilian.sbe
include_package_data=True
zip_safe=False

# TODO?
#setup_requires=['setuptools-git'],


#
# babel
#
[extract_messages]
mapping_file = etc/babel.cfg
# _n => ngettext, _l => lazy_gettext
keywords = _n:1,2 _l
output-file = abilian/sbe/translations/messages.pot
input-dirs = abilian/sbe

[update_catalog]
input-file = abilian/sbe/translations/messages.pot
output-dir = abilian/sbe/translations

[compile_catalog]
directory = abilian/sbe/translations

[init_catalog]
input-file = abilian/sbe/translations/messages.pot
output-dir = abilian/sbe/translations


#
# Testing
#
[pytest]
python_files = test*.py
addopts = --tb=short
norecursedirs = .tox demo *.egg
pep8ignore = E121 E111 E201 E202 E231 E261


#
# Static analysis
#
[flake8]
ignore = E111,E114,E121,E201,E202,E225,E501

[pep8]
ignore = E111,E114,E121,E201,E202,E225,E501

[pylama]
format = pylint
skip = */.tox/*
linters = pep8,mccabe
ignore = E111,E114,E121,E201,E202,E225,E501,W0311,C0111

